--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="DSAThemes" />
-    <meta name="description" content="OLMO - Software, App, SaaS & Startup Landing Pages Pack" />
-    <meta name="keywords" content="Responsive, HTML5, DSAThemes, One Page, Landing, Software, Mobile App, SaaS, Startup, Creative, Freelancers, Digital Product">
+    <meta name="description" content="IPS En Linea - Consulta el Aporte Familiar Permanente 2022" />
+    <meta name="keywords" content="ips en linea, pago ips en linea, ips">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SITE TITLE -->
     <title>IPS En Linea - Consulta el Aporte Familiar Permanente 2022</title>
 
     <!-- FAVICON AND TOUCH ICONS -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="152x152" href="images/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="images/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="images/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="icon" href="images/apple-touch-icon.png" type="image/x-icon">
+    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon@5x.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon@5x.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon@5x.png">
+    <link rel="apple-touch-icon" href="images/favicon@5x.png">
+    <link rel="icon" href="images/favicon@5x.png" type="image/x-icon">
 
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet">
