--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<!-- OLMO - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if lt IE 7 ]><html class="ie ie6" lang="es"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="es"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="es"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
-<html lang="en">
+<html lang="es">
 
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="author" content="DSAThemes" />
+    <meta name="author" content="SeoLab Chile" />
     <meta name="description" content="IPS En Linea - Consulta el Aporte Familiar Permanente 2022" />
     <meta name="keywords" content="ips en linea, pago ips en linea, ips">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -104,10 +103,10 @@
 
                         <!-- HEADER LOGO -->
                         <div class="desktoplogo">
-                            <a href="#hero-11" class="logo-black"><img src="./images/logo-ips.png" alt="IPS-EnLinea"></a>
+                            <a href="https://ips-enlinea.cl/" class="logo-black"><img src="./images/logo-ips.png" alt="IPS-EnLinea"></a>
                         </div>
                         <div class="desktoplogo">
-                            <a href="#hero-11" class="logo-white"><img src="./images/logo-ips.png" alt="IPS-EnLinea"></a>
+                            <a href="https://ips-enlinea.cl/" class="logo-white"><img src="./images/logo-ips.png" alt="IPS-EnLinea"></a>
                         </div>
 
                     </div>
