--- a/index.html
+++ b/index.html
@@ -228,19 +228,17 @@
     <!-- Custom Script -->
     <script src="js/custom.js"></script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z93HJ9FMY7"></script>
     <script>
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'G-Z93HJ9FMY7']);
-        _gaq.push(['_trackPageview']);
+        window.dataLayer = window.dataLayer || [];
 
-        (function() {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-Z93HJ9FMY7');
     </script>
 
 
