button links updated

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                         <!-- BUTTONS -->
                                         <div class="fbox-4 pr-25 mb-40 wow fadeInUp">
                                             <!-- Button -->
-                                            <a href="https://persona.ipsenlinea.cl/" class="btn button-persona blue-shadow" target="_blank">
+                                            <a href="https://persona.ipsenlinea.cl/IpsEnLinea/web/ingresoPersonas.jsf" class="btn button-persona blue-shadow" target="_blank">
                                                 <div class="persona-icon bg-blue">
                                                     <img src="https://www.ipsenlinea.cl/img/icon-btn-home-persona.png" alt="ips para personas" />
                                                 </div>
@@ -206,7 +206,7 @@
                                         <!-- BUTTONS -->
                                         <div class="fbox-4 pr-25 mb-40 wow fadeInUp">
                                             <!-- Button -->
-                                            <a href="https://empresa.ipsenlinea.cl/" class="btn button-persona red-shadow" target="_blank">
+                                            <a href="https://empresa.ipsenlinea.cl/IpsEnLineaEmpresa/login/ingresoPersonasEmpresa.jsf" class="btn button-persona red-shadow" target="_blank">
                                                 <div class="persona-icon bg-red">
                                                     <img src="https://www.ipsenlinea.cl/img/icon-btn-home-empresa.png" alt="ips para personas" />
                                                 </div>
