minor bug fixes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </script>
 
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
+    <script>
         (function(m, e, t, r, i, k, a) {
             m[i] = m[i] || function() {
                 (m[i].a = m[i].a || []).push(arguments)
@@ -82,17 +82,11 @@
             webvisor: true
         });
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/89335317" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <noscript><img src="https://mc.yandex.ru/watch/89335317" style="position:absolute; left:-9999px;" alt="" /></noscript>
     <!-- /Yandex.Metrika counter -->
-
 </head>
 
-
-
 <body>
-
-
-
 
     <!-- PRELOADER SPINNER
 		============================================= -->
@@ -107,21 +101,14 @@
         </div>
     </div>
 
-
-
-
     <!-- PAGE CONTENT
 		============================================= -->
     <div id="page" class="page">
-
-
-
 
         <!-- HEADER
 			============================================= -->
         <header id="header" class="header tra-menu navbar-dark">
             <div class="header-wrapper">
-
 
                 <!-- MOBILE HEADER -->
                 <div class="wsmobileheader clearfix">
@@ -129,11 +116,9 @@
                     <a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>
                 </div>
 
-
                 <!-- NAVIGATION MENU -->
                 <div class="wsmainfull menu clearfix">
                     <div class="wsmainwp clearfix">
-
 
                         <!-- HEADER LOGO -->
                         <div class="desktoplogo">
@@ -147,14 +132,10 @@
                 </div>
                 <!-- END NAVIGATION MENU -->
 
-
             </div>
             <!-- End header-wrapper -->
         </header>
         <!-- END HEADER -->
-
-
-
 
         <!-- HERO
 			============================================= -->
@@ -232,13 +213,8 @@
         </section>
         <!-- END HERO -->
 
-
-
     </div>
     <!-- END PAGE CONTENT -->
-
-
-
 
     <!-- EXTERNAL SCRIPTS
 		============================================= -->
@@ -263,7 +239,5 @@
     <script src="js/custom.js"></script>
 
 </body>
-
-
 
 </html>
